--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -1,6 +1,57 @@
-<form action="/processarCodigo" method="post">
-    <textarea name="conteudo" id="" cols="30" rows="10" style="resize: none;">
+<style>
+   
+    div#container{
+        background-color: #F58168;
+        width: 100%;
+        height:100vh;
+        display: flex;
+        align-items: center;
+        vertical-align: center;
+        justify-content: center;
+        
+    }
 
-    </textarea>
-    <button type="submit">Processar</button>
-</form>
+    div#conteudo {
+        font-size: 20px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-style: italic;
+        background-color: #8FD4D8;
+        padding: 30px;
+        border: solid 1px black;
+        border-radius: 5px;
+    }
+
+   button {
+       font-size: 12px;
+       background-color: white;
+       padding: 10px;
+       border-radius: 10px;
+       justify-content: center;
+       text-align: center;
+   }
+
+   textarea {
+       font-size: 20px;
+   }
+
+   ::placeholder {
+        color: green;
+    }   
+    
+</style>
+
+<div id="container">
+
+    <div id="conteudo">
+
+        <form action="/processarCodigo" method="post">
+
+            <textarea  name="conteudo" id="" cols="50" rows="10" style="resize: none;" >
+            </textarea>
+            <br/>
+            <button type="submit">Processar</button> 
+
+        </form>
+    </div>
+
+</div>
