--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -1,5 +1,30 @@
-<div>
+<style>
+    div#container{
+        background-color: #F58168;
+        width: 100%;
+        height:100%;
+        display: flex;
+        align-items: center;
+        vertical-align: center;
+        justify-content: center;
+        margin: auto;
+    }
+    div#conteudo {
+        font-size: 20px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-style: italic;
+        background-color: #8FD4D8;
+        padding: 30px;
+        border: solid 1px black;
+        border-radius: 5px;
+    }
+</style>
 
-    João  comeu ${5} pizzas em ${2} h
+
+<div id="container">
+
+    <div id="conteudo">
+        Bleuriane  comeu ${5} pizzas em ${2} horas.
+    </div>
 
 </div>
